index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     var ADMIN_NOTICE_TEXT = '카제 대구리 따러가실 분 공대장: 김민지';
 
     /* 상대경로로 통일: 같은 도메인으로 호출 → 모바일 CORS 회피 */
-    var API_BASE = '/api';
+    var API_BASE = 'https://yong-qgw8.vercel.app/api';
     var AUTO_MS = 60*60*1000; /* 1시간 */
 
     var $ = function(s){ return document.querySelector(s); };
